login page layout integration

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,6 +1,8 @@
 @import "bootstrap-variable-override";
 @import "~bootstrap/scss/bootstrap.scss";
 
+@import "global/base";
+@import "form/forms";
 @import "layout/login";
 
 @import "transitions";
