delete auth from store and import bootstrap in process form

--- a/src/assets/scss/_bootstrap-variable-override.scss
+++ b/src/assets/scss/_bootstrap-variable-override.scss
@@ -22,3 +22,10 @@ $card-border-width: 0;
 $input-padding-y: 0.8571rem;
 $input-padding-x: 1.571rem;
 $form-group-margin-bottom: $grid-gutter-width;
+
+$input-btn-focus-width: 0;
+$input-btn-focus-color: $primary;
+$input-btn-focus-box-shadow: none;
+
+//divider
+$dropdown-divider-bg: $border-color
