--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -4,6 +4,7 @@
 @import "global/base";
 @import "form/forms";
 @import "layout/login";
+@import "layout/dashboard";
 @import "pages/forgot-password";
 @import "component/divider";
 
