--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -2,6 +2,7 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
 @import "global/base";
+@import "global/svg";
 @import "form/forms";
 @import "layout/login";
 @import "layout/dashboard";
