--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,6 +1,8 @@
 @import "bootstrap-variable-override";
 @import "~bootstrap/scss/bootstrap.scss";
 
+@import "variables";
+@import "mixins";
 @import "global/base";
 @import "global/svg";
 @import "form/forms";
