create first select component, add vue click away and components page

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -10,5 +10,6 @@
 @import "layout/dashboard";
 @import "pages/forgot-password";
 @import "component/divider";
+@import "component/base-components/base-choice-list";
 
 @import "transitions";
