--- a/src/assets/scss/component/base-components/_base-choice-list.scss
+++ b/src/assets/scss/component/base-components/_base-choice-list.scss
@@ -1,4 +1,5 @@
 .choice-list {
+  position: relative;
   color: $primary;
   width: 211px;
   font-weight: normal;
@@ -31,8 +32,13 @@
   }
 
   &__list-options {
+    box-shadow: 0 2px 10px 0 rgba(0,0,0,0.07);
+    position: absolute;
+    top: 48px;
+    left: 0;
+    z-index: 20;
+    width: 100%;
     list-style-type: none;
-    margin: $grid-gutter-width/3 0 0 0;
     padding: 0;
     background-color: $white;
     li {
