--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -11,5 +11,6 @@
 @import "pages/forgot-password";
 @import "component/divider";
 @import "component/base-components/base-choice-list";
+@import "component/base-components/base-button-action";
 
 @import "transitions";
