Button Action variant

--- a/src/assets/scss/component/_divider.scss
+++ b/src/assets/scss/component/_divider.scss
@@ -2,3 +2,8 @@
   margin-top: $grid-gutter-width;
   margin-bottom: $grid-gutter-width;
 }
+
+.components__divider {
+  margin-top: $grid-gutter-width;
+  margin-bottom: $grid-gutter-width;
+}
