Card base component

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -12,5 +12,6 @@
 @import "component/divider";
 @import "component/base-components/base-choice-list";
 @import "component/base-components/base-button-action";
+@import "component/base-components/base-card";
 
 @import "transitions";
