Base Table Spaced style

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -13,5 +13,6 @@
 @import "component/base-components/base-choice-list";
 @import "component/base-components/base-button-action";
 @import "component/base-components/base-card";
+@import "component/base-components/base-table-spaced";
 
 @import "transitions";
