--- a/src/assets/scss/component/base-components/_base-table-spaced.scss
+++ b/src/assets/scss/component/base-components/_base-table-spaced.scss
@@ -1,18 +1,20 @@
 $base-table-spaced: 'table-spaced';
 
 .#{$base-table-spaced} {
+
   text-align: left;
   font-size: 0.9286rem;
+
   &__head {
+    color: $primary;
     background: $white;
     display: flex;
     justify-content: space-between;
     box-shadow: $bd-box-shadow;
     margin-bottom: $grid-gutter-width * 0.72;
   }
-  
-  &__header-items {
-    color: $primary;
+
+  &__items {
     flex: 1;
     line-height: 15px;
     padding: $grid-gutter-width / 2 $grid-gutter-width;
@@ -21,6 +23,10 @@ $base-table-spaced: 'table-spaced';
     & ~ & {
       border-left: 1px solid $border-color;
     }
+  }
+
+  &__header-items {
+    color: $primary;
   }
 
   &__body {
@@ -35,14 +41,5 @@ $base-table-spaced: 'table-spaced';
     justify-content: space-between;
     box-shadow: $bd-box-shadow;
     margin-bottom: $grid-gutter-width * 0.28;
-  }
-
-  &__body-items {
-    flex: 1;
-    padding: $grid-gutter-width / 2 $grid-gutter-width;
-
-    & ~ & {
-      border-left: 1px solid $border-color;
-    }
   }
 }
