--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -15,4 +15,5 @@
 @import "component/base-components/base-card";
 @import "component/base-components/base-table-spaced";
 
+@import "pages/project";
 @import "transitions";
