--- a/src/assets/scss/component/base-components/_base-card.scss
+++ b/src/assets/scss/component/base-components/_base-card.scss
@@ -7,6 +7,8 @@ $toolbox-background: #E6E6E6;
   max-width: 100%;
   box-shadow: $bd-box-shadow;
   padding: 0;
+  font-weight: normal;
+  text-align: left;
 }
 
 .#{$base-card-name}__header {
