--- a/src/assets/scss/component/base-components/_base-table-spaced.scss
+++ b/src/assets/scss/component/base-components/_base-table-spaced.scss
@@ -4,6 +4,7 @@ $base-table-spaced: 'table-spaced';
 
   text-align: left;
   font-size: 0.9286rem;
+  font-weight: normal;
 
   &__head {
     color: $primary;
@@ -11,13 +12,13 @@ $base-table-spaced: 'table-spaced';
     display: flex;
     justify-content: space-between;
     box-shadow: $bd-box-shadow;
-    margin-bottom: $grid-gutter-width * 0.72;
+    margin-bottom: $grid-gutter-width;
   }
 
   &__items {
     flex: 1;
     line-height: 15px;
-    padding: $grid-gutter-width / 2 $grid-gutter-width;
+    padding: $grid-gutter-width $grid-gutter-width * 2;
     box-sizing: border-box;
 
     & ~ & {
@@ -40,6 +41,6 @@ $base-table-spaced: 'table-spaced';
     display: flex;
     justify-content: space-between;
     box-shadow: $bd-box-shadow;
-    margin-bottom: $grid-gutter-width * 0.28;
+    margin-bottom: $grid-gutter-width / 2;
   }
 }
