Header integration and navigation link

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -8,6 +8,8 @@
 @import "form/forms";
 @import "layout/login";
 @import "layout/dashboard";
+@import "layout/header";
+@import "layout/header_user_menu";
 @import "pages/forgot-password";
 @import "component/divider";
 @import "component/base-components/base-choice-list";
