--- a/src/assets/scss/layout/_dashboard.scss
+++ b/src/assets/scss/layout/_dashboard.scss
@@ -1,7 +1,6 @@
 .wrapper {
   display: flex;
   flex-flow: row wrap;
-  font-weight: bold;
   text-align: center;
 }
 
@@ -20,5 +19,5 @@
 }
 
 .main {
-  padding: $grid-gutter-width;
+  padding: $grid-gutter-width $grid-gutter-width * 2;
 }
