--- a/src/assets/scss/pages/_project.scss
+++ b/src/assets/scss/pages/_project.scss
@@ -44,4 +44,12 @@
       flex: 0.9 auto;
     }
   }
+
+  .top-toolbar__button-new-file svg {
+    transition: .2s ease-in-out all;
+  }
+
+  .top-toolbar__button-new-file.active svg {
+    transform: rotate(135deg);
+  }
 }
