--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -16,6 +16,7 @@
 @import "component/base-components/base-button-action";
 @import "component/base-components/base-card";
 @import "component/base-components/base-table-spaced";
+@import "component/base-components/base-upload-area";
 
 @import "pages/project";
 @import "transitions";
