--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -17,6 +17,8 @@
 @import "component/base-components/base-card";
 @import "component/base-components/base-table-spaced";
 @import "component/base-components/base-upload-area";
+@import "component/base-components/base-input-text-material";
+@import "component/project-item";
 
 @import "pages/project";
 @import "transitions";
