Added a model preview component

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -17,6 +17,7 @@
 @import "component/base-components/base-card";
 @import "component/base-components/base-table-spaced";
 @import "component/base-components/base-upload-area";
+@import "component/base-components/base-model-preview";
 
 @import "pages/project";
 @import "transitions";
