Model preview test

--- a/src/assets/scss/component/base-components/_base-model-preview.scss
+++ b/src/assets/scss/component/base-components/_base-model-preview.scss
@@ -7,6 +7,6 @@ $base-model-preview: 'model-preview';
   img {
     width: 9600px;
     height: 360px;
-    position: relative;
+    position: absolute;
   }
 }
