--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -19,7 +19,10 @@
 @import "component/base-components/base-upload-area";
 @import "component/base-components/base-input-text-material";
 @import "component/base-components/base-bd-table";
+@import "component/base-components/base-button-tool";
 @import "component/project-item";
+@import "component/dms/dms_breadcrumb";
+@import "component/dms/dms";
 
 @import "pages/project";
 @import "transitions";
