--- a/src/assets/scss/component/dms/_dms.scss
+++ b/src/assets/scss/component/dms/_dms.scss
@@ -62,7 +62,11 @@
 .dms__toolbox {
   display: flex;
 
-  .base-button-tool ~ .base-button-tool {
+  .base-button-tool__container {
+    position: relative;
+  }
+
+  .base-button-tool__container ~ .base-button-tool__container {
     margin-left: $grid-gutter-width / 2;
   }
 
@@ -181,6 +185,50 @@
         transform: rotate(90deg);
       }
     }
+  }
+}
+
+.new_folder_box {
+  transition: .15s ease all;
+  opacity: 0;
+  position: absolute;
+  top: 37px;
+  left: 0;
+  background-color: white;
+  box-shadow: $bd-box-shadow;
+  z-index: 100;
+  text-align: left;
+  padding: $grid-gutter-width / 2 $grid-gutter-width;
+  color: $primary;
+  font-size: 0.64285714rem;
+
+  .base-input-text-material {
+    padding: $grid-gutter-width 0;
+    margin: 0;
+    input {
+      padding: 0;
+      font-size: 0.64285714rem;
+    }
+  }
+
+  .new_folder_box__button-validation {
+    flex: 1 auto;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+
+    span {
+      padding-left: $grid-gutter-width;
+      text-transform: uppercase;
+      &:hover {
+        cursor: pointer;
+        color: darken($primary, 10);
+      }
+    }
+  }
+
+  &.show {
+    opacity: 1;
   }
 }
 
