--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -20,6 +20,7 @@
 @import "component/base-components/base-input-text-material";
 @import "component/base-components/base-bd-table";
 @import "component/base-components/base-button-tool";
+@import "component/base-components/base-tree-select";
 @import "component/project-item";
 @import "component/dms/dms_breadcrumb";
 @import "component/dms/dms";
