--- a/src/assets/scss/component/dms/_dms.scss
+++ b/src/assets/scss/component/dms/_dms.scss
@@ -196,7 +196,7 @@
 
 .new_folder_box {
   transition: .15s ease all;
-  opacity: 0;
+  //opacity: 0;
   position: absolute;
   top: 37px;
   left: 0;
