--- a/src/assets/scss/pages/_project.scss
+++ b/src/assets/scss/pages/_project.scss
@@ -1,4 +1,5 @@
 .page-project {
+  padding-bottom: $grid-gutter-width * 10;
   .top-toolbar {
     &__choice-list-items {
       padding-right: $grid-gutter-width;
