--- a/src/assets/scss/component/_project-item.scss
+++ b/src/assets/scss/component/_project-item.scss
@@ -1,13 +1,44 @@
 .project_list {
   position: relative;
-}
+  display: flex;
+  justify-content: space-between;
 
+  &:after {
+    content: "";
+    flex: auto;
+  }
+}
+.card-container {
+  width: 100%;
+  margin-bottom: $grid-gutter-width * 2;
+
+  // Small devices (landscape phones, 576px and up)
+  @media (min-width: 576px) { 
+    width: calc(100%/2);
+   }
+
+  // Medium devices (tablets, 768px and up)
+  @media (min-width: 768px) {
+    width: calc(100%/3);
+  }
+
+  // Large devices (desktops, 992px and up)
+  @media (min-width: 992px) {
+    width: calc(100%/4);
+  }
+
+  // Extra large devices (large desktops, 1200px and up)
+  @media (min-width: 1200px) {
+    width: calc(100%/5);
+  }
+}
 .card-item {
   padding: $grid-gutter-width;
-  width: 216px;
+  max-width: 216px;
   height: 275px;
-  margin-bottom: $grid-gutter-width * 2;
   flex-direction: column;
+  margin: 0 auto;
+
   & ~ & {
   //  margin-left: 75px;
   }
