--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -1,10 +1,15 @@
 .header {
-  display: flex;
   height: $header-height;
   background-color: white;
   @include bm-box-shadow;
-  padding-left: $grid-gutter-width * 2;
-  padding-right: $grid-gutter-width * 2;
+  padding: $grid-gutter-width $grid-gutter-width * 2;
+
+  &__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
+  }
 }
 
 .logo-container {
@@ -17,7 +22,6 @@
 .navigation {
   display: flex;
   justify-content: center;
-  flex: 10 0 auto;
   align-items: stretch;
 
   &__item {
