--- a/src/assets/scss/component/_project-item.scss
+++ b/src/assets/scss/component/_project-item.scss
@@ -13,24 +13,34 @@
   margin-bottom: $grid-gutter-width * 2;
 
   // Small devices (landscape phones, 576px and up)
-  @media (min-width: 576px) { 
+  @include media-breakpoint-up(sm) { 
     width: calc(100%/2);
    }
 
   // Medium devices (tablets, 768px and up)
-  @media (min-width: 768px) {
+  @include media-breakpoint-up(md) {
     width: calc(100%/3);
   }
 
   // Large devices (desktops, 992px and up)
-  @media (min-width: 992px) {
+  @include media-breakpoint-up(lg) {
     width: calc(100%/4);
   }
 
   // Extra large devices (large desktops, 1200px and up)
-  @media (min-width: 1200px) {
+  @include media-breakpoint-up(xl) {
     width: calc(100%/5);
   }
+
+  // Extra large devices (large desktops, 1400px and up)
+  @include media-breakpoint-up(xxl) { 
+    width: calc(100%/6);
+   }
+
+   // Extra large devices (large desktops, 1600px and up)
+  @include media-breakpoint-up(xxxl) { 
+    width: calc(100%/7);
+   }
 }
 .card-item {
   padding: $grid-gutter-width;
