--- a/src/assets/scss/pages/_project.scss
+++ b/src/assets/scss/pages/_project.scss
@@ -1,3 +1,14 @@
+.project-list {
+  .page-project {
+    .top-toolbar {
+      &__choice-list-items {
+        width: 216px;
+        padding: 0;
+        margin: 0 auto;
+      }
+    }
+  }
+}
 .page-project {
   padding-bottom: $grid-gutter-width * 10;
   .top-toolbar {
