--- a/src/assets/scss/component/dms/_dms_breadcrumb.scss
+++ b/src/assets/scss/component/dms/_dms_breadcrumb.scss
@@ -1,10 +1,10 @@
 .dms {
-
   .breadcrumb {
     font-size: 0.92857143rem;
     color: $primary;
     font-weight: 500;
     box-shadow: $bd-box-shadow;
+    margin-bottom: 0;
     ul {
       margin: 0;
       padding: 0;
