--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -18,6 +18,7 @@
 @import "component/base-components/base-table-spaced";
 @import "component/base-components/base-upload-area";
 @import "component/base-components/base-input-text-material";
+@import "component/base-components/base-scrollbar";
 @import "component/base-components/base-bd-table";
 @import "component/base-components/base-button-tool";
 @import "component/base-components/base-tree-select";
