--- a/src/assets/scss/component/base-components/_base-table-spaced.scss
+++ b/src/assets/scss/component/base-components/_base-table-spaced.scss
@@ -17,6 +17,8 @@ $base-table-spaced: 'table-spaced';
 
   &__items {
     flex: 1;
+    display: flex;
+    align-items: center;
     line-height: 15px;
     padding: $grid-gutter-width $grid-gutter-width * 2;
     box-sizing: border-box;
