--- a/src/assets/scss/layout/_header_user_menu.scss
+++ b/src/assets/scss/layout/_header_user_menu.scss
@@ -33,21 +33,23 @@
       padding: 10px;
       display: flex;
       &--details {
-        padding-left: 10px;
+        padding-left: 15px;
         white-space: nowrap;
         text-overflow: ellipsis;
         width: 100%;
       }
     }
     &-fullname {
-      margin-bottom: 5px;
-      font-weight: 700;
+      margin-bottom: 0;
+      font-weight: 800;
       color: $text-color;
-      font-size: 12px;
+      font-size: 10px;
+      line-height: 10px;
     }
     &-email {
-      margin-bottom: 10px;
-      font-size: 12px;
+      font-size: 8px;
+      line-height: 8px;
+      margin-bottom: 5px;
     }
   }
 
@@ -74,11 +76,13 @@
     outline: none;
     color: $text-color;
     padding: 5px 0;
+    font-size: 10px;
   }
 
-  .btn {
+  .dropdown-menu .btn {
     min-width: auto;
     width: 100%;
+    font-size: 9px;
   }
 
   &__ddown {
