--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -48,7 +48,7 @@
       background-color: $primary;
       position: absolute;
       left: 0;
-      bottom: 0;
+      bottom: -6px;
       transition: .3s ease all;
     }
 
