--- a/src/assets/scss/component/base-components/_base-button-option.scss
+++ b/src/assets/scss/component/base-components/_base-button-option.scss
@@ -6,7 +6,7 @@ $base-button-option: 'base-button-option';
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 38px;
+    width: 27px;
     &:hover {
       cursor: pointer;
     }
@@ -22,12 +22,12 @@ $base-button-option: 'base-button-option';
       transition: .15s linear all;
       display: inline-block;
       content: '';
-      width: 25px;
-      height: 25px;
+      width: 27px;
+      height: 27px;
       border-radius: 50%;
       background-color: $primary;
       position: absolute;
-      left: 2px;
+      left: 0;
       top: 0;
       transform: scale(0);
     }
@@ -36,22 +36,29 @@ $base-button-option: 'base-button-option';
   &__menu {
     color: $body-color;
     position: absolute;
-    top: 35px;
-    left: -120px;
+    top: 25px;
+    right: 7px;
     background: white;
     border-radius: 3px;
     box-shadow: $bd-box-shadow;
+    padding: 8px 0;
     border: 1px solid $border-color;
     text-align: left;
     z-index: 250;
+    width: 114px;
     ul {
       list-style-type: none;
       margin: 0;
       padding: 0;
       z-index: 1500;
       li {
-        padding: $grid-gutter-width;
-        width: 150px;
+        padding: 7px 12px;
+        line-height: 1em;
+        color: #2F374A;
+
+        &:hover {
+          background: #F2F2F2;
+        }
       }
     }
   }
