--- a/src/assets/scss/component/base-components/_base-upload-area.scss
+++ b/src/assets/scss/component/base-components/_base-upload-area.scss
@@ -5,7 +5,6 @@ $base-upload-area: 'upload-area';
   .uppy-Dashboard-inner {
     border: 2px dashed $primary !important;
     border-radius: 8px !important;
-    height: 160px;
     min-width: 100% !important; //Override uppy.min.css file
     min-height: 200px !important; //Override uppy.min.css file
   }
@@ -57,4 +56,8 @@ $base-upload-area: 'upload-area';
     }
   }
 
+}
+.uppy-Dashboard--modal.uppy-Dashboard--animateOpenClose>.uppy-Dashboard-inner {
+  min-width: auto !important;
+  min-height: auto !important;
 }
