--- a/src/assets/scss/component/dms/_dms.scss
+++ b/src/assets/scss/component/dms/_dms.scss
@@ -224,7 +224,6 @@
 
 .new_folder_box {
   transition: .15s ease all;
-  //opacity: 0;
   position: absolute;
   top: 37px;
   left: 0;
@@ -232,16 +231,17 @@
   box-shadow: $bd-box-shadow;
   z-index: 100;
   text-align: left;
-  padding: $grid-gutter-width / 2 $grid-gutter-width;
+  padding: 11px;
   color: $primary;
-  font-size: 0.64285714rem;
+  font-size: 0.786rem;
 
   .base-input-text-material {
-    padding: $grid-gutter-width 0;
+    padding: 10px 0 26px 0;
     margin: 0;
     input {
       padding: 0;
-      font-size: 0.64285714rem;
+      font-size: 0.786rem;
+      color: #94979A;
     }
   }
 
