--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -12,6 +12,7 @@
 @import "layout/header_user_menu";
 @import "pages/forgot-password";
 @import "component/divider";
+@import "component/loader";
 @import "component/base-components/base-choice-list";
 @import "component/base-components/base-button-action";
 @import "component/base-components/base-card";
