--- a/src/assets/scss/_bootstrap-variable-override.scss
+++ b/src/assets/scss/_bootstrap-variable-override.scss
@@ -4,6 +4,7 @@ $body-color: #94979A;
 $primary: #2F374A;
 $bim-cyan: #00B5A6;
 $black: #000000;
+$white: #ffffff;
 $grid-gutter-width: 15px;
 $font-size-base: 0.875rem;
 
