fermeture arbo GED qd clic sur larbo + cursor pointer croix fermeture arbo

--- a/src/assets/scss/component/dms/_dms.scss
+++ b/src/assets/scss/component/dms/_dms.scss
@@ -154,8 +154,11 @@
   .dms__tree-view-header {
     display: flex;
     justify-content: flex-end;
-
     padding: $grid-gutter-width / 2;
+
+    .svg-icon {
+      cursor: pointer;
+    }
   }
 
   ul {
