suppression surbrillance selction dans le menu horizontal ged

--- a/src/assets/scss/component/dms/_dms.scss
+++ b/src/assets/scss/component/dms/_dms.scss
@@ -69,6 +69,10 @@
 
 .dms__toolbox {
   display: flex;
+  -moz-user-select: none; /* Firefox */
+  -webkit-user-select: none; /* Chrome, Safari, Opéra depuis la version 15 */
+  -ms-user-select: none; /* Internet explorer depuis la version 10 et Edge */
+  user-select: none; /* Propriété standard */
 
   .base-button-tool__container {
     position: relative;
