--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -14,6 +14,7 @@
 @import "component/divider";
 @import "component/loader";
 @import "component/base-components/base-choice-list";
+@import "component/base-components/base-dropdown";
 @import "component/base-components/base-button-action";
 @import "component/base-components/base-card";
 @import "component/base-components/base-table-spaced";
