--- a/src/assets/scss/layout/_header_user_menu.scss
+++ b/src/assets/scss/layout/_header_user_menu.scss
@@ -1,4 +1,3 @@
-
 .user-menu {
   display: flex;
   align-items: center;
@@ -30,8 +29,10 @@
 
   &__u {
     &-info {
-      padding: 10px;
+      padding: 10px 8px;
       display: flex;
+      align-items: center;
+
       &--details {
         padding-left: 15px;
         white-space: nowrap;
@@ -41,15 +42,13 @@
     }
     &-fullname {
       margin-bottom: 0;
-      font-weight: 800;
       color: $text-color;
-      font-size: 10px;
-      line-height: 10px;
+      font-size: 12px;
     }
     &-email {
-      font-size: 8px;
-      line-height: 8px;
-      margin-bottom: 5px;
+      font-size: 10px;
+      color: #959595;
+      margin-bottom: 9px;
     }
   }
 
@@ -57,7 +56,7 @@
     width: 200px;
     border: none;
     background-color: white;
-    margin-top: 0;
+    margin-top: 9px;
     @include bm-box-shadow;
 
     &:after {
@@ -83,19 +82,5 @@
     min-width: auto;
     width: 100%;
     font-size: 9px;
-  }
-
-  &__ddown {
-    height: 100%;
-    & > .btn.dropdown-toggle {
-      background-color: white;
-      color: $primary;
-      border: none;
-      height: 100%;
-      &:active {
-        background-color: white;
-        color: $primary;
-      }
-    }
   }
 }
