ajutement espaces entre les choicelist et les cards

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -13,6 +13,7 @@
 @import "pages/forgot-password";
 @import "component/divider";
 @import "component/loader";
+@import "component/toolbar-page";
 @import "component/base-components/base-choice-list";
 @import "component/base-components/base-button-action";
 @import "component/base-components/base-card";
