Adding fixed overlay block. Closing menu when clicked everywhere else.

--- a/src/assets/scss/component/dms/_dms.scss
+++ b/src/assets/scss/component/dms/_dms.scss
@@ -241,6 +241,18 @@
   padding: 11px;
   color: $primary;
   font-size: 0.786rem;
+  z-index: 2;
+
+  &__overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 1;
+  }
 
   .base-input-text-material {
     padding: 10px 0 26px 0;
