--- a/src/assets/scss/component/base-components/_base-model-preview.scss
+++ b/src/assets/scss/component/base-components/_base-model-preview.scss
@@ -1,12 +1,22 @@
-$base-model-preview: 'model-preview';
-
-.#{$base-model-preview} {
-  border: solid 1px red;
+.model-preview {
+  width: 100%;
+  position: relative;
   overflow: hidden;
-
-  img {
-    width: 9600px;
-    height: 360px;
+  display: block;
+  .model-image-wrapper {
+    display: block;
+    overflow: hidden;
+    position: relative;
+  }
+  .model-image-holder {
     position: absolute;
+    height: 100%;
+    width: auto;
+    left: 0;
+    top: 0;
+    img {
+      height: 100%;
+      width: auto;
+    }
   }
 }
