--- a/src/assets/scss/component/dms/_dms.scss
+++ b/src/assets/scss/component/dms/_dms.scss
@@ -107,7 +107,6 @@
   height: 420px;
 
   .dms__tree-view {
-    // padding-top: $grid-gutter-width;
     transition: .2s ease all;
     position: absolute;
     left: -500px;
@@ -141,9 +140,53 @@
     min-width: 0;
     transition: .2s ease all;
 
+    & > thead {
+      & > tr {
+        & > th {
+          outline: none;
+
+          &.sorting {
+            &:before,
+            &:after {
+              display: none;
+            }
+          }
+        } 
+      }
+    }
     td {
       vertical-align: middle; 
       line-height: 1em;
+      word-break: break-all;
+    }
+
+    .table-selected {
+
+    }
+    .table-name {
+      width: 47%;
+      min-width: 47%;
+    }
+    .table-type {
+      width: 10%;
+      min-width: 10%;
+    }
+    .table-creator {
+      width: 9%;
+      min-width: 9%;
+      padding-top: 0;
+      padding-bottom: 0;
+    }
+    .table-date {
+      width: 14%;
+      min-width: 14%;
+    }
+    .table-size {
+      width: 9%;
+      min-width: 9%;
+    }
+    .table-action {
+
     }
   }
 
