debug centrage loader cartes

--- a/src/assets/scss/component/_loader.scss
+++ b/src/assets/scss/component/_loader.scss
@@ -12,7 +12,9 @@
 }
 
 .lds-dual-ring {
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 64px;
   height: 64px;
 }
